markdown
why this error : ft_isascii.c: In function ‘ft_isascii’:
ft_isascii.c:17:21: error: comparison is always true due to limited range of data type [-Werror=type-limits]
   17 |     if (c >= 0 && c <= 127)
      |                     ^~